--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html;" charset="UTF-8" />
 </head>
 <body>
-Hello
-<a href="/hello">hello</a>
+<p th:text="'안녕하세요.' + ${data} ">안녕하세요. 손님</p>
 </body>
 </html>
 
